Revert "Working poc"
This reverts commit 0e1726a28b5b827523d98525cc835e35d8dffa8c.

--- a/PoC/Remote-Process-Injection-Direct-Syscall-HellsGate/Remote-Process-Injection-Direct-Syscall-HellsGate.vcxproj
+++ b/PoC/Remote-Process-Injection-Direct-Syscall-HellsGate/Remote-Process-Injection-Direct-Syscall-HellsGate.vcxproj
@@ -129,6 +129,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="HellsGate.c" />
+    <ClCompile Include="main.c" />
   </ItemGroup>
   <ItemGroup>
     <MASM Include="HellAsm.asm">
