--- a/PoC/Remote-Process-Injection-Direct-Syscall-HellsGate/Remote-Process-Injection-Direct-Syscall-HellsGate.vcxproj.filters
+++ b/PoC/Remote-Process-Injection-Direct-Syscall-HellsGate/Remote-Process-Injection-Direct-Syscall-HellsGate.vcxproj.filters
@@ -15,6 +15,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="main.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="HellsGate.c">
       <Filter>Source Files</Filter>
     </ClCompile>
